syntax = "proto2";
option go_package = "git.juniper.net/iceberg/healthbot-ingest-jti-native/pkg/jti/adapters/_junos/schema";
import "telemetry_top.proto";

extend JuniperNetworksSensors {
   optional system_debug jnpr_system_debug_ext = 106;
}

message system_debug {
   optional processes_type processes = 151;
   message processes_type {
      message process_list {
         optional uint64 pid = 51 [(telemetry_options).is_key = true];
         optional state_type state = 151;
         message state_type {
            optional uint64 pid = 51;
            optional string name = 52;
            optional uint64 start_time = 53;
            optional uint64 uptime = 54;
            optional uint64 cpu_usage_user = 55;
            optional uint64 cpu_usage_system = 56;
            optional uint32 cpu_utilization = 57;
            optional uint64 memory_usage = 58;
            optional uint32 memory_utilization = 59;
         }
      }
      repeated process_list process = 151;
   }
}
