syntax = "proto2";
option go_package = "git.juniper.net/iceberg/healthbot-ingest-jti-native/pkg/jti/adapters/_junos/schema";
import "telemetry_top.proto";

extend JuniperNetworksSensors {
   optional arp_information_mib_arp jnpr_arp_information_mib_arp_ext = 53;
}

message arp_information_mib_arp {
   optional ipv4_type ipv4 = 151;
   message ipv4_type {
      optional neighbors_type neighbors = 151;
      message neighbors_type {
         message neighbor_list {
            optional string ip = 51 [(telemetry_options).is_key = true];
            optional state_type state = 151;
            message state_type {
               optional string ip = 51;
               optional string link_layer_address = 52;
               optional string origin = 53;
               optional string host_name = 61;
               optional uint32 table_id = 62;
               optional string neighbor_state = 63;
               optional uint32 expiry = 64;
               optional bool is_publish = 65;
               optional string interface_name = 66;
               optional uint32 logical_router_id = 67;
            }
         }
         repeated neighbor_list neighbor = 151;
      }
   }
}
